# release-manager

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  pyproject.toml  repos.json
.claude/agents/: backend.md  frontend.md  git-services.md  testing.md
.claude/rules/: code-style.md  frontend.md  security.md  testing.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test/: SKILL.md
docs/: architecture.md
src/release_manager/: __main__.py  app.py  models.py  settings.py
src/release_manager/api/: routes.py
src/release_manager/services/: deploy.py  exporter.py  git_ops.py  github_pr.py  linear.py  parser.py  remote.py  scanner.py
src/release_manager/static/: style.css
src/release_manager/templates/: base.html  deploy.html  draft.html  index.html  release_detail.html  release_diff.html  releases.html
src/release_manager/templates/partials/: remote_repo_list.html  repo_list.html  report_content.html  report_table.html
tests/: test_deploy.py  test_git_ops.py  test_github_pr.py  test_pages.py  test_parser.py  test_remote.py  test_scanner.py  test_sync_check.py
